fixed checkbox alignments

--- a/_sass/layout/_card.scss
+++ b/_sass/layout/_card.scss
@@ -141,7 +141,7 @@
 // All/None toggle switches
 .select-all-none {
   display: inline;
-  padding: 0 .55em 0 .11em;
+  padding: 0 .55em 0 0;
 
   label { margin: 0 0 -2px; }
 }
